<resources>
    <string name="app_name">blood pressure</string>
    <string name="a_note">Note</string>
    <string name="ab_essay_default_use_english">AB Essay default use english</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_ok">OK</string>
    <string name="ad_consent_dialog_title">Welcome</string>
    <string name="ad_consent_tip">The privacy policy is updated to adapt to the EU General Data Protection Regulation (GDPR). You can read it in #.\10\10Please click \"Continue\" to agree to the policy and use all features of this product. Click \"I don\'t agree\" on # page if you don\'t want any personal data to be collected.</string>
    <string name="ad_continue">Continue</string>
    <string name="ad_debug_setting">Ads debug setting</string>
    <string name="ad_later">Later</string>
    <string name="ad_privacy_policy">Privacy policy</string>
    <string name="ad_showing_ads">Showing ads</string>
    <string name="ad_tip">Tip</string>
    <string name="ad_update">Update</string>
    <string name="add">Add</string>
    <string name="add_at_least_1">Add at least 1 record to unlock the stats</string>
    <string name="add_data">Add one years data</string>
    <string name="add_new_note">Add new</string>
    <string name="all_history">All history</string>
    <string name="already_have">You already have record(s) at the selected time. Do you want to add another one or cover your previous records?</string>
    <string name="always_show_rate">Always show rate</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="average">Average</string>
    <string name="average_24_hours">24h average</string>
    <string name="blood_pressure">Blood Pressure</string>
    <string name="blood_pressure_tool">Blood Pressure Tool</string>
    <string name="bloodpressure_app_name">Blood Pressure</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bp2_app_name">Blood Pressure App</string>
    <string name="bp2_knowledge_10_a">How to Control Blood Pressure?</string>
    <string name="bp2_knowledge_12">Hypotension Diagnosis</string>
    <string name="bp2_knowledge_13">Medications for Hypotension</string>
    <string name="bp2_knowledge_16_a">How Does BP Change With Age?</string>
    <string name="bp2_knowledge_17">Hypertension Control During the COVID-19</string>
    <string name="bp2_knowledge_18">Learn Hypertension Triggers</string>
    <string name="bp2_knowledge_19">Measure BP at Home</string>
    <string name="bp2_knowledge_2">Normal BP Range</string>
    <string name="bp2_knowledge_20">Change Lifestyle to Fight Hypotension</string>
    <string name="bp2_knowledge_21">Know &amp; Treat Gestational Hypertension</string>
    <string name="bp2_knowledge_22">Avoid 9 Foods for Hypertension</string>
    <string name="bp2_knowledge_23">Avoid 5 Foods for Hypotension</string>
    <string name="bp2_knowledge_24">Control Hypotension via Diet</string>
    <string name="bp2_knowledge_25">Get Tests to Diagnose Hypertension</string>
    <string name="bp2_knowledge_26">Know Drugs Bad for Hypertension</string>
    <string name="bp2_knowledge_27">Learn Blood Pressure Daily Pattern</string>
    <string name="bp2_knowledge_2_a">Am I at a Normal BP Range?</string>
    <string name="bp2_knowledge_3">Blood Pressure Types</string>
    <string name="bp2_knowledge_4">Blood Pressure Myths</string>
    <string name="bp2_knowledge_5">Hypertension Types</string>
    <string name="bp2_knowledge_6">Hypertension Symptoms</string>
    <string name="bp2_knowledge_7">Hypertension Effects</string>
    <string name="bp2_knowledge_8">Hypotension Symptoms &amp; Types</string>
    <string name="bp2_knowledge_version4_1">Hypertension and Lifestyle</string>
    <string name="bp2_knowledge_version4_10">BP Daily Pattern</string>
    <string name="bp2_knowledge_version4_2">Hypertension and Exercises</string>
    <string name="bp2_knowledge_version4_3">BP Changes with Age</string>
    <string name="bp2_knowledge_version4_4">Hypertension &amp; COVID-19</string>
    <string name="bp2_knowledge_version4_5">Hypotension and Lifestyle</string>
    <string name="bp2_knowledge_version4_6">Gestational Hypertension</string>
    <string name="bp2_knowledge_version4_7">Hypotension Diet</string>
    <string name="bp2_knowledge_version4_8">Hypertension Diagnosis</string>
    <string name="bp2_knowledge_version4_9">Drugs Bad for Hypertension</string>
    <string name="bp2_share_text_1">You are just one step away from controlling your blood pressure! Download Blood Pressure to track and grasp all you need!</string>
    <string name="bp2_share_text_2">This Blood Pressure app really guides you towards your blood pressure goal simply and reliably! Come and join me!</string>
    <string name="bp_info_knowledge">Blood Pressure Info &amp; Knowledge</string>
    <string name="bp_notes">BP Notes</string>
    <string name="bpm">BPM</string>
    <string name="bq_tag_after_meal">After meal</string>
    <string name="bq_tag_after_medication">After medication</string>
    <string name="bq_tag_after_walking">After walking</string>
    <string name="bq_tag_before_meal">Before meal</string>
    <string name="bq_tag_left">Left</string>
    <string name="bq_tag_lying">Lying</string>
    <string name="bq_tag_right">Right</string>
    <string name="bq_tag_sitting">Sitting</string>
    <string name="brvah_app_name">Library</string>
    <string name="brvah_load_end">没有更多数据</string>
    <string name="brvah_load_failed">加载失败，请点我重试</string>
    <string name="brvah_loading">正在加载中...</string>
    <string name="button_rate_on_google">Rate on Google</string>
    <string name="cancel">Cancel</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="colon">:</string>
    <string name="com.crashlytics.android.build_id">ca41a54493fe4542998ef387cc0f2e35</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="copy_toast_msg">Link copied to clipboard</string>
    <string name="cover_previous_records">Cover</string>
    <string name="date">Date</string>
    <string name="date_time">Date &amp; Time</string>
    <string name="debug">Debug</string>
    <string name="debug_version">B</string>
    <string name="default_web_client_id">48220487817-n1lg3u077o9lrjk13de1feu19soijv4a.apps.googleusercontent.com</string>
    <string name="delete">Delete</string>
    <string name="delete_all_record">Delete all record</string>
    <string name="delete_song">Are you sure you want to delete it?</string>
    <string name="delete_sure">Are you sure you want to delete?</string>
    <string name="delete_tag">Delete the tag?</string>
    <string name="diastolic">Diastolic</string>
    <string name="discover_insights_lifestyle">Discover professional insights and helpful tips for a healthy lifestyle</string>
    <string name="drive_syncing_data">Synchronizing data</string>
    <string name="edit">Edit</string>
    <string name="edit_add">Edit/Add</string>
    <string name="edit_image_tips_msg">Do you want to save the changes you\'ve made?</string>
    <string name="elevated">Elevated</string>
    <string name="et_input_hint">Please enter something</string>
    <string name="feedback_or_questions_report">Got feedback or questions? Tell us</string>
    <string name="leave_feedback">Leave feedback</string>
    <string name="long_press_to_reorder">Long press and drag to reorder</string>
    <string name="mmhg">mmHg</string>
    <string name="pulse">Pulse</string>
    <string name="save">Save</string>
    <string name="send_now">Send now</string>
    <string name="systolic">Systolic</string>
</resources>