<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/assistant_extra_bold"
        android:text="@string/systolic"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_16"
        app:autoSizeMaxTextSize="@dimen/sp_16"
        app:autoSizeMinTextSize="@dimen/sp_10"
        app:layout_constraintLeft_toLeftOf="@id/npk1"
        app:layout_constraintRight_toRightOf="@id/npk1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/unit1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/assistant_regular"
        android:text="@string/mmhg"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_14"
        android:textStyle="normal"
        app:layout_constraintLeft_toLeftOf="@id/npk1"
        app:layout_constraintRight_toRightOf="@id/npk1"
        app:layout_constraintTop_toBottomOf="@id/title1" />

    <com.shawnlin.numberpicker.NumberPicker
        android:id="@+id/npk1"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/cm_dp_120"
        android:layout_marginTop="@dimen/dp_20"
        app:layout_constraintEnd_toStartOf="@id/npk2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/unit1"
        app:np_dividerColor="@color/picker_divide"
        app:np_dividerDistance="@dimen/sp_35"
        app:np_dividerLength="@dimen/cm_dp_50"
        app:np_dividerThickness="@dimen/dp_1"
        app:np_maxFlingVelocityCoefficient="1"
        app:np_selectedTextColor="@color/white"
        app:np_selectedTextSize="@dimen/sp_28"
        app:np_textColor="@color/white_70"
        app:np_textSize="@dimen/sp_28"
        app:np_wheelItemCount="3"
        app:np_wrapSelectorWheel="false" />

    <TextView
        android:id="@+id/title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/assistant_extra_bold"
        android:text="@string/diastolic"
        android:textColor="@color/white"
          android:textSize="@dimen/sp_16"
        app:autoSizeMaxTextSize="@dimen/sp_16"
        app:autoSizeMinTextSize="@dimen/sp_10"
        app:layout_constraintLeft_toLeftOf="@id/npk2"
        app:layout_constraintRight_toRightOf="@id/npk2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/unit2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/assistant_regular"
        android:text="@string/mmhg"
        android:textColor="@color/white"
       android:textSize="@dimen/sp_14"
        android:textStyle="normal"
        app:layout_constraintLeft_toLeftOf="@id/npk2"
        app:layout_constraintRight_toRightOf="@id/npk2"
        app:layout_constraintTop_toBottomOf="@id/title1" />

    <com.shawnlin.numberpicker.NumberPicker
        android:id="@+id/npk2"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/cm_dp_120"
        android:layout_marginTop="@dimen/dp_20"
        app:layout_constraintEnd_toStartOf="@id/npk3"
        app:layout_constraintStart_toEndOf="@id/npk1"
        app:layout_constraintTop_toBottomOf="@id/unit1"
        app:np_dividerColor="@color/picker_divide"
        app:np_dividerDistance="@dimen/sp_35"
        app:np_dividerLength="@dimen/cm_dp_50"
        app:np_dividerThickness="@dimen/dp_1"
        app:np_maxFlingVelocityCoefficient="1"
        app:np_selectedTextColor="@color/white"
        app:np_selectedTextSize="@dimen/sp_28"
        app:np_textColor="@color/white_70"
        app:np_textSize="@dimen/sp_28"
        app:np_wheelItemCount="3"
        app:np_wrapSelectorWheel="false" />

    <TextView
        android:id="@+id/title3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/assistant_extra_bold"
        android:text="@string/pulse"
        android:textColor="@color/white"
          android:textSize="@dimen/sp_16"
        app:autoSizeMaxTextSize="@dimen/sp_16"
        app:autoSizeMinTextSize="@dimen/sp_10"
        app:layout_constraintLeft_toLeftOf="@id/npk3"
        app:layout_constraintRight_toRightOf="@id/npk3"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/unit3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/assistant_regular"
        android:text="@string/bpm"
        android:textColor="@color/white"
       android:textSize="@dimen/sp_14"
        android:textStyle="normal"
        app:layout_constraintLeft_toLeftOf="@id/npk3"
        app:layout_constraintRight_toRightOf="@id/npk3"
        app:layout_constraintTop_toBottomOf="@id/title1" />

    <com.shawnlin.numberpicker.NumberPicker
        android:id="@+id/npk3"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/cm_dp_120"
        android:layout_marginTop="@dimen/dp_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/npk2"
        app:layout_constraintTop_toBottomOf="@id/unit1"
        app:np_dividerColor="@color/picker_divide"
        app:np_dividerDistance="@dimen/sp_35"
        app:np_dividerLength="@dimen/cm_dp_50"
        app:np_dividerThickness="@dimen/dp_1"
        app:np_maxFlingVelocityCoefficient="1"
        app:np_selectedTextColor="@color/white"
        app:np_selectedTextSize="@dimen/sp_28"
        app:np_textColor="@color/white_70"
        app:np_textSize="@dimen/sp_28"
        app:np_wheelItemCount="3"
        app:np_wrapSelectorWheel="false" />


</androidx.constraintlayout.widget.ConstraintLayout>