<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dp_15"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ac_iv_close"
            android:layout_width="@dimen/dp_28"
            android:layout_height="@dimen/dp_28"
            android:layout_marginStart="@dimen/dp_15"
            android:background="@drawable/translucence_clickable_view_round"
            android:padding="@dimen/dp_2"
            android:src="@drawable/icon_general_back_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/ac_tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_12"
            android:layout_marginEnd="@dimen/dp_15"
            android:fontFamily="@font/assistant_extra_bold"
            android:text="@string/leave_feedback"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_22"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ac_iv_close"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_bg"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dp_29"
        android:background="@color/home_record_bg"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl_top_bar">

        <com.example.bloodpressure.widgets.customview.MyEditText
            android:id="@+id/et_feedback"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/dp_15"
            android:background="@color/home_record_bg"
            android:fontFamily="@font/assistant_regular"
            android:gravity="top|left|center_vertical|center_horizontal|center|start"
            android:hint="@string/feedback_or_questions_report"
            android:minHeight="@dimen/dp_160"
            android:minLines="4"
            android:padding="@dimen/dp_15"
            android:textColor="@color/white"
            android:textColorHint="@color/white_50"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/sp_16"
            app:layout_constraintBottom_toTopOf="@+id/cl_send"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_send"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_49"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_20"
            android:layout_marginBottom="@dimen/dp_15"
            android:background="@drawable/buttons_ripple"
            android:elevation="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/tv_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/assistant_extra_bold"
                android:gravity="center"
                android:text="@string/send_now"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_22"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
