<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_pre"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ac_iv_close"
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"
            android:layout_marginStart="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_16"
            android:background="@drawable/round_ripple"
            android:src="@drawable/icon_general_close"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/ac_tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_60"
            android:layout_marginEnd="@dimen/dp_20"
            android:fontFamily="@font/assistant_extra_bold"
            android:gravity="center"
            android:text="@string/long_press_to_reorder"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ac_iv_close" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_notes"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/dp_60"
            android:layout_marginBottom="@dimen/dp_15"
            android:paddingStart="@dimen/dp_20"
            android:paddingEnd="@dimen/dp_20"
            app:layout_constraintBottom_toTopOf="@+id/cl_new"
            app:layout_constraintTop_toBottomOf="@+id/ac_tv_title" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_new"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_49"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_20"
            android:layout_marginBottom="@dimen/dp_16"
            android:background="@drawable/buttons_ripple_black_round"
            android:elevation="2dp"
            app:layout_constraintBottom_toTopOf="@+id/acb_save">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_new"
                android:layout_width="@dimen/dp_24"
                android:layout_height="@dimen/dp_24"
                android:layout_marginEnd="@dimen/dp_5"
                android:padding="@dimen/dp_2"
                android:src="@drawable/icon_note_add"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/tv_new"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_new"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/assistant_extra_bold"
                android:gravity="center"
                android:text="@string/add_new_note"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_22"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toEndOf="@+id/iv_new"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/acb_save"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_49"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_20"
            android:layout_marginBottom="@dimen/dp_20"
            android:background="@drawable/buttons_ripple"
            android:fontFamily="@font/assistant_extra_bold"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_22"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/v_bg_new_note"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_70"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
