<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.example.bloodpressure.widgets.customview.RadiusCardView
        android:id="@+id/rcv_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:topLeftRadius="10dp"
        app:topRightRadius="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/edit_content_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:paddingTop="@dimen/dp_20">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/ac_et_note"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_45"
                android:layout_marginStart="@dimen/dp_15"
                android:layout_marginEnd="@dimen/dp_15"
                android:layout_marginBottom="@dimen/dp_10"
                android:background="@drawable/bg_ripple_add_note"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:fontFamily="@font/assistant_regular"
                android:hint="@string/et_input_hint"
                android:inputType="text"
                android:maxLength="21"
                android:paddingStart="@dimen/dp_20"
                android:paddingEnd="@dimen/dp_20"
                android:textColor="@color/black"
                android:textColorHint="@color/black_50"
                android:textCursorDrawable="@drawable/shape_add_edit_cursor"
                android:textSize="@dimen/sp_16"
                app:layout_constraintBottom_toTopOf="@+id/cl_btn" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_15"
                android:layout_marginEnd="@dimen/dp_15"
                android:layout_marginBottom="@dimen/dp_10"
                app:layout_constraintBottom_toBottomOf="parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/ac_tv_cancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_8"
                    android:layout_marginEnd="@dimen/dp_8"
                    android:background="@drawable/translucence_clickable_view"
                    android:fontFamily="@font/assistant_regular"
                    android:gravity="center"
                    android:padding="@dimen/dp_8"
                    android:text="@string/cancel"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_20"
                    app:autoSizeMaxTextSize="@dimen/sp_20"
                    app:autoSizeMinTextSize="@dimen/sp_10"
                    app:autoSizeStepGranularity="1sp"
                    app:autoSizeTextType="uniform"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/v_line"
                    app:layout_constraintStart_toStartOf="parent" />

                <View
                    android:id="@+id/v_line"
                    android:layout_width="0.5dp"
                    android:layout_height="0dp"
                    android:alpha="0.3"
                    android:background="@color/gray_97"
                    app:layout_constraintBottom_toBottomOf="@+id/ac_tv_cancel"
                    app:layout_constraintEnd_toStartOf="@+id/ac_tv_save"
                    app:layout_constraintStart_toEndOf="@+id/ac_tv_cancel"
                    app:layout_constraintTop_toTopOf="@+id/ac_tv_cancel" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/ac_tv_save"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_8"
                    android:layout_marginEnd="@dimen/dp_8"
                    android:background="@drawable/translucence_clickable_view"
                    android:fontFamily="@font/assistant_regular"
                    android:gravity="center"
                    android:padding="@dimen/dp_8"
                    android:text="@string/save"
                    android:textColor="@color/btn_bg"
                    android:textSize="@dimen/sp_20"
                    app:autoSizeMaxTextSize="@dimen/sp_20"
                    app:autoSizeMinTextSize="@dimen/sp_10"
                    app:autoSizeStepGranularity="1sp"
                    app:autoSizeTextType="uniform"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/v_line" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.example.bloodpressure.widgets.customview.RadiusCardView>
</androidx.constraintlayout.widget.ConstraintLayout>
